frontend-deploy.yaml
apiVersion: v1 
kind: Namespace
metadata:
  name: todo-dev

---
apiVersion: apps/v1
kind: Deployment 
metadata: 
  name: todo-frontend
  namespace: todo-dev
  labels: 
    tier: frontend
    app: todo-app
spec: 
  replicas: 1
  selector: 
    matchLabels: 
      tier: frontend
      app: todo-app
  template: 
    metadata: 
      labels:
        tier: frontend
        app: todo-app
    spec: 
      restartPolicy: Always
      
      containers:
        - name: frontend
          image: "636750014592.dkr.ecr.ap-south-1.amazonaws.com/rajsingh8826/react-frontend:latest"
          imagePullPolicy: Always

          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: ecr-secret     
      volumes:
        - name: nginx-config
          configMap:
            name: frontend-nginx-config
---

apiVersion: v1 
kind: Service 
metadata: 
  name: todo-svc
  namespace: todo-dev
  labels: 
    tier: frontend
    app: todo-app
spec: 
  type: ClusterIP
  selector: 
    tier: frontend
    app: todo-app
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
---
