ingress.yaml


apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-ingress
  namespace: todo-dev
spec:
  rules:
    
    - http:
        paths:
          - pathType: Prefix
            path: /api/
            backend:
              service:
                name: todo-backend-svc
                port:
                  number: 5000
          - pathType: Prefix
            path: /
            backend:
              service:
                name: todo-svc
                port:
                  number: 80
